<resources>
    <string name="app_name">RL Brand</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RL Brand</string>
    <string name="nav_header_subtitle">Instagram</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_catalog">Catálogo Semanal</string>
    <string name="menu_category">Categorias</string>
    <string name="category_skirt">Saias</string>
    <string name="category_shirt">Blusas</string>
    <string name="category_dress">Vestidos</string>
    <string name="category_set">Conjuntos</string>
    <string name="category_jumpsuit">Macacões</string>
    <string name="menu_contact">Contatos</string>
    <string name="menu_info">Informações</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="num_whatsapp">+55 (85) 99203-2671</string>
    <string name="num2_whatsapp">+55 (85) 98743-2087</string>
    <string name="instagram">Instagram</string>
    <string name="id_instagram">"@"RLBrandd</string>
    <string name="attendance">Horários de atendimento</string>
    <string name="monday_saturday">Segunda a Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="hours1">08:00 às 19:30</string>
    <string name="hours2">08:00 às 15:30</string>
    <string name="location">Localização:</string>
    <string name="address">Centro Fashion - Setor Roxo</string>
    <string name="address1">Loja 1: Rua Coronel Ferraz 3152</string>
    <string name="address2">Loja 2: Rua 25 de Março 3172 e 3176</string>
    <string name="item_selected">Item Selecionado</string>
    <string name="title_activity_item_selected">ItemSelectedActivity</string>
    <string name="notice1">Informações sobre valors de atacado e varejo pelo Direct ou pelo Whatsapp.</string>
    <string name="notice2">Conheça nossas peças em nosso Catálogo Semanal ou pelo Instagram.</string>
    <string name="notice3">Não reservamos peças, sem efetuar o pagamento.</string>
    <string name="delivery1">Mande seu endereço pelo Whatsapp ou Instagram que calculamos sua taxa.</string>
    <string name="delivery2">Fazemos entregas de qualquer valor.</string>
    <string name="wholesale1">Pedido mínimo de 5 peças para compra presencial, sendo para envio o mínimo de 10 peças (Podem ser modelos variados).</string>
    <string name="wholesale2">Somos de Fortaleza/Ceará.</string>
    <string name="wholesale3">Enviamos para todo o Brasil via Correios (frete sob consulta) e Excursões.</string>
    <string name="wholesale4">Separamos as peças após a confirmação do pagamento.</string>
    <string name="wholesale5">O pagamento pode ser feito via depósito, transferência, cartão de crédito ou débito (com acréscimo).</string>
</resources>